--- a/Veterinaria Moka/crear-cuenta.html
+++ b/Veterinaria Moka/crear-cuenta.html
@@ -146,7 +146,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/servicio-general.js"></script>
-    <script src="js/usuarios.js"></script>
+    <script src="js/crear-cuenta.js"></script>
 </body>
 
 </html>
