agregar funcionalidad de fotos de perfil

--- a/Veterinaria Moka/usuario-perfil.html
+++ b/Veterinaria Moka/usuario-perfil.html
@@ -87,7 +87,7 @@
         </div>
 
 
-  
+
 
         <div id="inicio-sesion">
             <h2>Perfil de usuario</h2>
@@ -96,12 +96,16 @@
                 <table id="tbl-usuarios">
                     <thead>
                         <tr>
-                            <th colspan="2" id="nombre-usuario">
+                            <th colspan="2">
+                                <img id="foto-usuario">
                             </th>
                         </tr>
                     </thead>
                     <tbody>
-
+                        <tr>
+                            <td><b>Nombre:</b></td>
+                            <td id="nombre-usuario"></td>
+                        </tr>
                         <tr>
                             <td><b>Cédula:</b></td>
                             <td id="cedula-usuario"></td>
