--- a/Veterinaria Moka/usuario-registro.html
+++ b/Veterinaria Moka/usuario-registro.html
@@ -96,6 +96,11 @@
 
                 <form>
                     <div>
+                        <img id="foto-usuario">
+                        <button type="button" id="btn-foto" class="btn">Subir foto</button>
+                    </div>
+                    <hr>
+                    <div>
                         <label for="txt-nombre">Nombre del usuario: </label>
                         <input type="text" id="txt-nombre">
                     </div>
@@ -133,6 +138,7 @@
                             <option value="1">Adminstrador</option>
                         </select>
                     </div>
+
                     <div>
                         <button type="button" id="btn-guardar" class="btn">Guardar</button>
                     </div>
@@ -153,9 +159,11 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/nav.js"></script>
     <script src="js/servicio-general.js"></script>
     <script src="js/usuario-registro.js"></script>
+    <script src="js/servicio-imagen.js"></script>
 </body>
 
 </html>
