--- a/Veterinaria Moka/crear-cuenta.html
+++ b/Veterinaria Moka/crear-cuenta.html
@@ -94,6 +94,11 @@
 
                 <form>
                     <div>
+                        <img id="foto-usuario">
+                        <button type="button" id="btn-foto" class="btn">Subir foto</button>
+                    </div>
+                    <hr>
+                    <div>
                         <label for="txt-nombre">Nombre del usuario: </label>
                         <input type="text" id="txt-nombre">
                     </div>
@@ -144,9 +149,12 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/nav.js"></script>
     <script src="js/servicio-general.js"></script>
     <script src="js/crear-cuenta.js"></script>
+    <script src="js/servicio-imagen.js"></script>
+
 </body>
 
 </html>
