--- a/Veterinaria Moka/doctor-registro.html
+++ b/Veterinaria Moka/doctor-registro.html
@@ -12,25 +12,27 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/registro-doctor.css">
     <link rel="stylesheet" href="css/responsive.css">
+
     <title>Veterinaria Moka</title>
+
 </head>
 
 <body>
     <div id="container-principal">
-
         <header>
             <div id="logo"></div>
             <div id="titulo">Veterinaria Moka</div>
             <div id="iniciar-sesion">
                 <a class="btn" id="btn-ingresar">Iniciar Sesión</a>
                 <a class="btn" id="btn-salir">Cerrar Sesión</a>
-                <a id="crear-cuenta" href="crear-cuenta.html">Crear cuenta</a>
-                <div id="usuario-conectado"></div>
+                <a id="crear-cuenta" href="usuario-registro.html">Crear cuenta</a>
             </div>
         </header>
         <nav>
             <a href="index.html">Inicio</a><a href="#">Productos</a><a href="#">Servicios</a><a href="#">Hotel</a><a href="blog.html">Blog</a><a href="acerca-de.html">Acerca De</a>
         </nav>
+
+
         <div id="menu-backend">
             <div class="dropdown">
                 <a>Mascotas</a>
@@ -86,9 +88,6 @@
                 </ul>
             </div>
         </div>
-
-
-
         <div id="inicio-sesion">
             <h2 class="titulo-registro-doctor">Registrar Doctor</h2>
             <div id="registro">
@@ -121,8 +120,8 @@
                         <label for="slt-genero">Género</label>
                         <select name="genero" id="slt-genero">
                 <option value="">-- Seleccione el género--</option>
-                <option value="hembra">Masculino</option>
-                <option value="macho">Femenino</option>
+                <option value="hembra">Hombre</option>
+                <option value="macho">Mujer</option>
                 <option value="macho">Otro</option>
               </select>
                     </div>
@@ -148,11 +147,11 @@
 
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/nav.js"></script>
     <script src="js/servicio-general.js"></script>
     <script src="js/registro-doctor.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
