--- a/Veterinaria Moka/doctores-listar.html
+++ b/Veterinaria Moka/doctores-listar.html
@@ -113,7 +113,7 @@
                                 <th>Años experiencia</th>
                                 <th>Género</th>
                                 <th>Fotografía</th>
-                                <th></th>
+                                <th>Acciones</th>
                                 <th></th>
                                 <th></th>
                             </tr>
